--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WeGO">
+        android:theme="@style/Theme.WeGO"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".CategoryItemListActivity"></activity>
         <activity android:name=".ReviewPostShow" />
         <activity android:name=".HomeScreenActivity">
             <intent-filter>
@@ -22,8 +23,7 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".ReviewPosts">
-        </activity>
+        <activity android:name=".ReviewPosts"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
