--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.android.support:design:28.0.0'
