--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".RegisterActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ReviewPosts" />
+        <activity android:name=".EditProfileActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
